--- a/main.html
+++ b/main.html
@@ -10,6 +10,7 @@
 <body>
     <!-- add table here -->
 	<table>
+		<thead>
 		<tr>
 			<th>NAME</th>
 			<th>KILLS</th>
@@ -18,6 +19,8 @@
 			<th>REVIVES</th>
 			<th>WINS</th>
 		</tr>
+		</thead>
+		<tbody>
 		<tr>
 			<td>Hackerman</td>
 			<td>10</td>
@@ -49,7 +52,8 @@
 			<td>3</td>
 			<td>5</td>
 			<td>1</td>
-		</tr>											
+		</tr>
+		</tbody>
 	</table>       
 </body>
 </html>
